--- a/about.html
+++ b/about.html
@@ -4,17 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>من نحن - Al-Minshaw Shop</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-
     <header class="navbar">
         <div class="container wrap">
             <a class="brand" href="index.html">
-                <img src="assets/icons/ams-logo.png" alt="Logo"> Al-Minshaw Shop
+                <img src="assets/icons/ams-logo.PNG" alt="Logo"> Al-Minshaw Shop
             </a>
             <label for="menu-toggle" class="burger"><span></span></label>
             <input type="checkbox" id="menu-toggle" />
@@ -30,7 +26,8 @@
     <main class="container">
         <div class="section-head"><h2>من نحن</h2><p>تعرف أكثر على قصة المتجر وقيمنا</p></div>
 
-        <img src="assets/images/banner.jpg" alt="Al-Minshaw Shop Banner" class="banner-img">
+        <!-- بانر المتجر بصورك -->
+        <img src="assets/images/banner.JPG" alt="Al-Minshaw Shop Banner" class="banner-img">
 
         <div class="card mt-24">
             <div class="inner">
@@ -49,21 +46,9 @@
                     </div>
 
                     <div>
-                        <img src="assets/images/Coffee.jpg" alt="Coffee sample" style="border-radius:12px">
+                        <img src="assets/images/Coffee.JPG" alt="Coffee sample" style="border-radius:12px">
                     </div>
                 </div>
-            </div>
-        </div>
-
-        <h2 class="mt-32">لماذا تختارنا؟</h2>
-        <div class="card">
-            <div class="inner">
-                <ul style="margin:0;padding-inline-start:20px;line-height:2">
-                    <li>مكونات طازجة يوميًا.</li>
-                    <li>أسعار واضحة وعروض موسمية.</li>
-                    <li>خدمة عملاء سريعة الاستجابة.</li>
-                    <li>سهولة الطلب — اطلب بثلاث نقرات فقط.</li>
-                </ul>
             </div>
         </div>
     </main>
@@ -71,10 +56,7 @@
     <footer>
         <div class="container footer-grid">
             <div>
-                <h4>
-                    <img src="assets/icons/ams-logo.png" alt="Logo" style="width:20px;height:20px;border-radius:5px;vertical-align:middle;margin-left:6px;">
-                    Al-Minshaw Shop
-                </h4>
+                <h4><img src="assets/icons/ams-logo.PNG" alt="Logo" style="width:20px;height:20px;border-radius:5px;vertical-align:middle;margin-left:6px;"> Al-Minshaw Shop</h4>
                 <p>وجهتك للأطعمة والمشروبات المختارة بعناية.</p>
             </div>
             <div><h4>التواصل</h4><p>📧 <a href="mailto:youssif2371@gmail.com">youssif2371@gmail.com</a><br>📞 <a href="tel:+201554338151">+201554338151</a></p></div>
@@ -82,6 +64,5 @@
         </div>
         <div class="container footer-small">© 2025 Al-Minshaw Shop — جميع الحقوق محفوظة.</div>
     </footer>
-
 </body>
 </html>
