--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class="navbar">
         <div class="container wrap">
             <a class="brand" href="index.html">
-                <img src="assets/icons/ams-logo.png" alt="Logo">
+                <img src="assets/icons/ams-logo.PNG" alt="Logo" style="width:32px;height:32px;border-radius:8px;">
                 Al-Minshaw Shop
             </a>
             <label for="menu-toggle" class="burger"><span></span></label>
@@ -35,7 +35,7 @@
                 <div class="inner">
                     <span class="badge">طازج • مختار بعناية</span>
                     <h1>أطعمة ومشروبات مميّزة تُقدَّم بذوق.</h1>
-                    <p class="lead">قهوة مختصّة، مشروبات مثلّجة، صودا منعشة، ووجبات شهية من أفضل المكونات.</p>
+                    <p class="lead">قهوة مختصّة، مشروبات مثلّجة، صودا منعشة، ووجبات شهية من أفضل المكوّنات.</p>
                     <div class="actions">
                         <a class="btn btn-primary" href="products.html">ابدأ التسوق</a>
                         <a class="btn" href="about.html">لماذا نحن؟</a>
@@ -45,7 +45,7 @@
 
             <div class="hero-visual">
                 <div class="plate">
-                    <img src="assets/images/Cappuccino.jpg" alt="تشكيلة أطعمة ومشروبات" />
+                    <img src="assets/images/Cappuccino.JPG" alt="Cappuccino" />
                 </div>
                 <div class="note">اختيارات منتقاة • تحديث دوري</div>
             </div>
@@ -59,10 +59,49 @@
             </div>
 
             <div class="grid products">
-                <article class="card"><div class="cover"><img src="assets/images/Cappuccino.jpg" alt="Cappuccino"><span class="price">$3.90</span></div><div class="body"><h3>Cappuccino</h3><p>إسبريسو مع رغوة حليب.</p><div class="row"><span class="tag">قهوة</span><a class="btn btn-primary" href="products.html#coffee">تصفح الفئة</a></div></div></article>
-                <article class="card"><div class="cover"><img src="assets/images/Chocolate Brownie Milkshake.jpg" alt="Chocolate Brownie Milkshake"><span class="price">$5.90</span></div><div class="body"><h3>Chocolate Brownie Milkshake</h3><p>كريمي وثقيل بالشوكولاتة.</p><div class="row"><span class="tag">ميلك شيك</span><a class="btn btn-primary" href="products.html#milkshakes">تصفح الفئة</a></div></div></article>
-                <article class="card"><div class="cover"><img src="assets/images/Burger, double cheese.jpg" alt="Burger, double cheese"><span class="price">$7.90</span></div><div class="body"><h3>Burger, double cheese</h3><p>جبنة مزدوجة وطعم مميز.</p><div class="row"><span class="tag">وجبات</span><a class="btn btn-primary" href="products.html#meals">تصفح الفئة</a></div></div></article>
-                <article class="card"><div class="cover"><img src="assets/images/Coca-Cola.jpg" alt="Coca-Cola"><span class="price">$1.80</span></div><div class="body"><h3>Coca-Cola</h3><p>منعشة ومثلجة.</p><div class="row"><span class="tag">صودا</span><a class="btn btn-primary" href="products.html#soda">تصفح الفئة</a></div></div></article>
+                <article class="card">
+                    <div class="cover">
+                        <img src="assets/images/Cappuccino.JPG" alt="Cappuccino">
+                        <span class="price">$3.90</span>
+                    </div>
+                    <div class="body">
+                        <h3>Cappuccino</h3><p>إسبريسو مع رغوة حليب.</p>
+                        <div class="row"><span class="tag">قهوة</span><a class="btn btn-primary" href="products.html#coffee">تصفح الفئة</a></div>
+                    </div>
+                </article>
+
+                <article class="card">
+                    <div class="cover">
+                        <img src="assets/images/Chocolate Brownie Milkshake.JPG" alt="Chocolate Brownie Milkshake">
+                        <span class="price">$5.90</span>
+                    </div>
+                    <div class="body">
+                        <h3>Chocolate Brownie Milkshake</h3><p>كريمي بالشوكولاتة.</p>
+                        <div class="row"><span class="tag">ميلك شيك</span><a class="btn btn-primary" href="products.html#milkshakes">تصفح الفئة</a></div>
+                    </div>
+                </article>
+
+                <article class="card">
+                    <div class="cover">
+                        <img src="assets/images/Burger, double cheese.JPG" alt="Burger, double cheese">
+                        <span class="price">$7.90</span>
+                    </div>
+                    <div class="body">
+                        <h3>Burger, double cheese</h3><p>جبنة مزدوجة وطعم مميز.</p>
+                        <div class="row"><span class="tag">وجبات</span><a class="btn btn-primary" href="products.html#meals">تصفح الفئة</a></div>
+                    </div>
+                </article>
+
+                <article class="card">
+                    <div class="cover">
+                        <img src="assets/images/Coca-Cola.JPG" alt="Coca-Cola">
+                        <span class="price">$1.80</span>
+                    </div>
+                    <div class="body">
+                        <h3>Coca-Cola</h3><p>منعشة ومثلجة.</p>
+                        <div class="row"><span class="tag">صودا</span><a class="btn btn-primary" href="products.html#soda">تصفح الفئة</a></div>
+                    </div>
+                </article>
             </div>
         </section>
     </main>
@@ -70,20 +109,11 @@
     <footer>
         <div class="container footer-grid">
             <div>
-                <h4>
-                    <img src="assets/icons/ams-logo.png" alt="Logo" style="width:20px;height:20px;border-radius:5px;vertical-align:middle;margin-left:6px;">
-                    Al-Minshaw Shop
-                </h4>
+                <h4><img src="assets/icons/ams-logo.PNG" alt="Logo" style="width:20px;height:20px;border-radius:5px;vertical-align:middle;margin-left:6px;"> Al-Minshaw Shop</h4>
                 <p>وجهتك للأطعمة والمشروبات المختارة بعناية.</p>
             </div>
-            <div>
-                <h4>التواصل</h4>
-                <p>📧 <a href="mailto:youssif2371@gmail.com">youssif2371@gmail.com</a><br>📞 <a href="tel:+201554338151">+201554338151</a></p>
-            </div>
-            <div>
-                <h4>روابط</h4>
-                <p><a href="products.html">المنتجات</a><br><a href="about.html">من نحن</a><br><a href="contact.html">تواصل</a></p>
-            </div>
+            <div><h4>التواصل</h4><p>📧 <a href="mailto:youssif2371@gmail.com">youssif2371@gmail.com</a><br>📞 <a href="tel:+201554338151">+201554338151</a></p></div>
+            <div><h4>روابط</h4><p><a href="products.html">المنتجات</a><br><a href="about.html">من نحن</a><br><a href="contact.html">تواصل</a></p></div>
         </div>
         <div class="container footer-small">© 2025 Al-Minshaw Shop — جميع الحقوق محفوظة.</div>
     </footer>
