--- a/products.html
+++ b/products.html
@@ -14,7 +14,7 @@
     <header class="navbar">
         <div class="container wrap">
             <a class="brand" href="index.html">
-                <img src="assets/icons/ams-logo.png" alt="Logo"> Al-Minshaw Shop
+                <img src="assets/icons/ams-logo.PNG" alt="Logo"> Al-Minshaw Shop
             </a>
             <label for="menu-toggle" class="burger"><span></span></label>
             <input type="checkbox" id="menu-toggle" />
@@ -41,10 +41,10 @@
         <section id="coffee" class="mt-32">
             <div class="section-head"><h2>قهوة</h2><p>مختارات القهوة الساخنة والباردة</p></div>
             <div class="grid products">
-                <article class="card"><div class="cover"><img src="assets/images/Coffee.jpg" alt="Coffee"><span class="price">$3.50</span></div><div class="body"><h3>Coffee</h3><p>قهوة مُحضّرة طازجة.</p><div class="row"><span class="tag">قهوة</span><a class="btn" href="#">أضف</a></div></div></article>
-                <article class="card"><div class="cover"><img src="assets/images/Espresso.jpg" alt="Espresso"><span class="price">$2.80</span></div><div class="body"><h3>Espresso</h3><p>جرعة إسبريسو مركّزة.</p><div class="row"><span class="tag">قهوة</span><a class="btn" href="#">أضف</a></div></div></article>
-                <article class="card"><div class="cover"><img src="assets/images/Cappuccino.jpg" alt="Cappuccino"><span class="price">$3.90</span></div><div class="body"><h3>Cappuccino</h3><p>إسبريسو مع رغوة حليب.</p><div class="row"><span class="tag">قهوة</span><a class="btn" href="#">أضف</a></div></div></article>
-                <article class="card"><div class="cover"><img src="assets/images/Caramel White Mocha.jpg" alt="Caramel White Mocha"><span class="price">$4.80</span></div><div class="body"><h3>Caramel White Mocha</h3><p>موكا بيضاء مع كراميل غني.</p><div class="row"><span class="tag">قهوة</span><a class="btn" href="#">أضف</a></div></div></article>
+                <article class="card"><div class="cover"><img src="assets/images/Coffee.JPG" alt="Coffee"><span class="price">$3.50</span></div><div class="body"><h3>Coffee</h3><p>قهوة طازجة.</p><div class="row"><span class="tag">قهوة</span><a class="btn" href="#">أضف</a></div></div></article>
+                <article class="card"><div class="cover"><img src="assets/images/Espresso.JPG" alt="Espresso"><span class="price">$2.80</span></div><div class="body"><h3>Espresso</h3><p>جرعة إسبريسو مركّزة.</p><div class="row"><span class="tag">قهوة</span><a class="btn" href="#">أضف</a></div></div></article>
+                <article class="card"><div class="cover"><img src="assets/images/Cappuccino.JPG" alt="Cappuccino"><span class="price">$3.90</span></div><div class="body"><h3>Cappuccino</h3><p>إسبريسو مع رغوة حليب.</p><div class="row"><span class="tag">قهوة</span><a class="btn" href="#">أضف</a></div></div></article>
+                <article class="card"><div class="cover"><img src="assets/images/Caramel White Mocha.JPG" alt="Caramel White Mocha"><span class="price">$4.80</span></div><div class="body"><h3>Caramel White Mocha</h3><p>موكا بيضاء مع كراميل.</p><div class="row"><span class="tag">قهوة</span><a class="btn" href="#">أضف</a></div></div></article>
             </div>
         </section>
 
@@ -52,13 +52,13 @@
         <section id="milkshakes" class="mt-32">
             <div class="section-head"><h2>مشروبات مثلّجة</h2><p>ميلك شيك كريمي ومنعش</p></div>
             <div class="grid products">
-                <article class="card"><div class="cover"><img src="assets/images/Chocolate Brownie Milkshake.jpg" alt="Chocolate Brownie Milkshake"><span class="price">$5.90</span></div><div class="body"><h3>Chocolate Brownie Milkshake</h3><p>شوكولاتة وبراونيز.</p><div class="row"><span class="tag">ميلك شيك</span><a class="btn" href="#">أضف</a></div></div></article>
-                <article class="card"><div class="cover"><img src="assets/images/Blueberry Milkshake.jpg" alt="Blueberry Milkshake"><span class="price">$5.50</span></div><div class="body"><h3>Blueberry Milkshake</h3><p>توت أزرق كريمي.</p><div class="row"><span class="tag">ميلك شيك</span><a class="btn" href="#">أضف</a></div></div></article>
-                <article class="card"><div class="cover"><img src="assets/images/Nutella Milkshake.jpg" alt="Nutella Milkshake"><span class="price">$5.90</span></div><div class="body"><h3>Nutella Milkshake</h3><p>نكهة نوتيلا.</p><div class="row"><span class="tag">ميلك شيك</span><a class="btn" href="#">أضف</a></div></div></article>
-                <article class="card"><div class="cover"><img src="assets/images/Oreo Chocolate Milkshake.jpg" alt="Oreo Chocolate Milkshake"><span class="price">$5.90</span></div><div class="body"><h3>Oreo Chocolate Milkshake</h3><p>أوريو بالشوكولاتة.</p><div class="row"><span class="tag">ميلك شيك</span><a class="btn" href="#">أضف</a></div></div></article>
-                <article class="card"><div class="cover"><img src="assets/images/Creamy Strawberry Milkshake.jpg" alt="Creamy Strawberry Milkshake"><span class="price">$5.50</span></div><div class="body"><h3>Creamy Strawberry Milkshake</h3><p>فراولة كريمية.</p><div class="row"><span class="tag">ميلك شيك</span><a class="btn" href="#">أضف</a></div></div></article>
-                <article class="card"><div class="cover"><img src="assets/images/Classic Vanilla Milkshake.jpg" alt="Classic Vanilla Milkshake"><span class="price">$5.20</span></div><div class="body"><h3>Classic Vanilla Milkshake</h3><p>فانيلا كلاسيك.</p><div class="row"><span class="tag">ميلك شيك</span><a class="btn" href="#">أضف</a></div></div></article>
-                <article class="card"><div class="cover"><img src="assets/images/Creamy Banana Milkshake.jpg" alt="Creamy Banana Milkshake"><span class="price">$5.40</span></div><div class="body"><h3>Creamy Banana Milkshake</h3><p>موز كريمي.</p><div class="row"><span class="tag">ميلك شيك</span><a class="btn" href="#">أضف</a></div></div></article>
+                <article class="card"><div class="cover"><img src="assets/images/Chocolate Brownie Milkshake.JPG" alt="Chocolate Brownie Milkshake"><span class="price">$5.90</span></div><div class="body"><h3>Chocolate Brownie Milkshake</h3><p>شوكولاتة وبراونيز.</p><div class="row"><span class="tag">ميلك شيك</span><a class="btn" href="#">أضف</a></div></div></article>
+                <article class="card"><div class="cover"><img src="assets/images/Blueberry Milkshake.JPG" alt="Blueberry Milkshake"><span class="price">$5.50</span></div><div class="body"><h3>Blueberry Milkshake</h3><p>توت أزرق كريمي.</p><div class="row"><span class="tag">ميلك شيك</span><a class="btn" href="#">أضف</a></div></div></article>
+                <article class="card"><div class="cover"><img src="assets/images/Nutella Milkshake.JPG" alt="Nutella Milkshake"><span class="price">$5.90</span></div><div class="body"><h3>Nutella Milkshake</h3><p>نكهة نوتيلا.</p><div class="row"><span class="tag">ميلك شيك</span><a class="btn" href="#">أضف</a></div></div></article>
+                <article class="card"><div class="cover"><img src="assets/images/Oreo Chocolate Milkshake.JPG" alt="Oreo Chocolate Milkshake"><span class="price">$5.90</span></div><div class="body"><h3>Oreo Chocolate Milkshake</h3><p>أوريو بالشوكولاتة.</p><div class="row"><span class="tag">ميلك شيك</span><a class="btn" href="#">أضف</a></div></div></article>
+                <article class="card"><div class="cover"><img src="assets/images/Creamy Strawberry Milkshake.JPG" alt="Creamy Strawberry Milkshake"><span class="price">$5.50</span></div><div class="body"><h3>Creamy Strawberry Milkshake</h3><p>فراولة كريمية.</p><div class="row"><span class="tag">ميلك شيك</span><a class="btn" href="#">أضف</a></div></div></article>
+                <article class="card"><div class="cover"><img src="assets/images/Classic Vanilla Milkshake.JPG" alt="Classic Vanilla Milkshake"><span class="price">$5.20</span></div><div class="body"><h3>Classic Vanilla Milkshake</h3><p>فانيلا كلاسيك.</p><div class="row"><span class="tag">ميلك شيك</span><a class="btn" href="#">أضف</a></div></div></article>
+                <article class="card"><div class="cover"><img src="assets/images/Creamy Banana Milkshake.JPG" alt="Creamy Banana Milkshake"><span class="price">$5.40</span></div><div class="body"><h3>Creamy Banana Milkshake</h3><p>موز كريمي.</p><div class="row"><span class="tag">ميلك شيك</span><a class="btn" href="#">أضف</a></div></div></article>
             </div>
         </section>
 
@@ -66,9 +66,9 @@
         <section id="soda" class="mt-32">
             <div class="section-head"><h2>مشروبات صودا</h2><p>منعشة ومثلجة</p></div>
             <div class="grid products">
-                <article class="card"><div class="cover"><img src="assets/images/Coca-Cola.jpg" alt="Coca-Cola"><span class="price">$1.80</span></div><div class="body"><h3>Coca-Cola</h3><p>كوكاكولا مثلجة.</p><div class="row"><span class="tag">صودا</span><a class="btn" href="#">أضف</a></div></div></article>
-                <article class="card"><div class="cover"><img src="assets/images/Pepsi.jpg" alt="Pepsi"><span class="price">$1.70</span></div><div class="body"><h3>Pepsi</h3><p>بيبسي منعش.</p><div class="row"><span class="tag">صودا</span><a class="btn" href="#">أضف</a></div></div></article>
-                <article class="card"><div class="cover"><img src="assets/images/Red Bull.jpg" alt="Red Bull"><span class="price">$2.40</span></div><div class="body"><h3>Red Bull</h3><p>مشروب طاقة بارد.</p><div class="row"><span class="tag">صودا</span><a class="btn" href="#">أضف</a></div></div></article>
+                <article class="card"><div class="cover"><img src="assets/images/Coca-Cola.JPG" alt="Coca-Cola"><span class="price">$1.80</span></div><div class="body"><h3>Coca-Cola</h3><p>كوكاكولا مثلجة.</p><div class="row"><span class="tag">صودا</span><a class="btn" href="#">أضف</a></div></div></article>
+                <article class="card"><div class="cover"><img src="assets/images/Pepsi.JPG" alt="Pepsi"><span class="price">$1.70</span></div><div class="body"><h3>Pepsi</h3><p>بيبسي منعش.</p><div class="row"><span class="tag">صودا</span><a class="btn" href="#">أضف</a></div></div></article>
+                <article class="card"><div class="cover"><img src="assets/images/Red Bull.JPG" alt="Red Bull"><span class="price">$2.40</span></div><div class="body"><h3>Red Bull</h3><p>مشروب طاقة بارد.</p><div class="row"><span class="tag">صودا</span><a class="btn" href="#">أضف</a></div></div></article>
             </div>
         </section>
 
@@ -76,13 +76,13 @@
         <section id="meals" class="mt-32">
             <div class="section-head"><h2>وجبات</h2><p>سريعة وشهية</p></div>
             <div class="grid products">
-                <article class="card"><div class="cover"><img src="assets/images/Burger, double cheese.jpg" alt="Burger, double cheese"><span class="price">$7.90</span></div><div class="body"><h3>Burger, double cheese</h3><p>برجر جبنة مزدوجة.</p><div class="row"><span class="tag">وجبات</span><a class="btn" href="#">أضف</a></div></div></article>
-                <article class="card"><div class="cover"><img src="assets/images/Chicken burger.jpg" alt="Chicken burger"><span class="price">$6.90</span></div><div class="body"><h3>Chicken burger</h3><p>برجر دجاج مقرمش.</p><div class="row"><span class="tag">وجبات</span><a class="btn" href="#">أضف</a></div></div></article>
-                <article class="card"><div class="cover"><img src="assets/images/Twister sandwich.jpg" alt="Twister sandwich"><span class="price">$6.20</span></div><div class="body"><h3>Twister sandwich</h3><p>تويستر ساندوتش.</p><div class="row"><span class="tag">وجبات</span><a class="btn" href="#">أضف</a></div></div></article>
-                <article class="card"><div class="cover"><img src="assets/images/Pizza pepperoni.jpg" alt="Pizza pepperoni"><span class="price">$8.90</span></div><div class="body"><h3>Pizza pepperoni</h3><p>بيتزا ببروني.</p><div class="row"><span class="tag">وجبات</span><a class="btn" href="#">أضف</a></div></div></article>
-                <article class="card"><div class="cover"><img src="assets/images/Lasagna.jpg" alt="Lasagna"><span class="price">$7.50</span></div><div class="body"><h3>Lasagna</h3><p>لازانيا بالجبن.</p><div class="row"><span class="tag">وجبات</span><a class="btn" href="#">أضف</a></div></div></article>
-                <article class="card"><div class="cover"><img src="assets/images/Steak.jpg" alt="Steak"><span class="price">$12.90</span></div><div class="body"><h3>Steak</h3><p>ستيك مشوي.</p><div class="row"><span class="tag">وجبات</span><a class="btn" href="#">أضف</a></div></div></article>
-                <article class="card"><div class="cover"><img src="assets/images/Mix grill.jpg" alt="Mix grill"><span class="price">$11.90</span></div><div class="body"><h3>Mix grill</h3><p>مشاوي مشكلة.</p><div class="row"><span class="tag">وجبات</span><a class="btn" href="#">أضف</a></div></div></article>
+                <article class="card"><div class="cover"><img src="assets/images/Burger, double cheese.JPG" alt="Burger, double cheese"><span class="price">$7.90</span></div><div class="body"><h3>Burger, double cheese</h3><p>برجر جبنة مزدوجة.</p><div class="row"><span class="tag">وجبات</span><a class="btn" href="#">أضف</a></div></div></article>
+                <article class="card"><div class="cover"><img src="assets/images/Chicken burger.JPG" alt="Chicken burger"><span class="price">$6.90</span></div><div class="body"><h3>Chicken burger</h3><p>برجر دجاج مقرمش.</p><div class="row"><span class="tag">وجبات</span><a class="btn" href="#">أضف</a></div></div></article>
+                <article class="card"><div class="cover"><img src="assets/images/Twister sandwich.JPG" alt="Twister sandwich"><span class="price">$6.20</span></div><div class="body"><h3>Twister sandwich</h3><p>تويستر ساندوتش.</p><div class="row"><span class="tag">وجبات</span><a class="btn" href="#">أضف</a></div></div></article>
+                <article class="card"><div class="cover"><img src="assets/images/Pizza pepperoni.JPG" alt="Pizza pepperoni"><span class="price">$8.90</span></div><div class="body"><h3>Pizza pepperoni</h3><p>بيتزا ببروني.</p><div class="row"><span class="tag">وجبات</span><a class="btn" href="#">أضف</a></div></div></article>
+                <article class="card"><div class="cover"><img src="assets/images/Lasagna.JPG" alt="Lasagna"><span class="price">$7.50</span></div><div class="body"><h3>Lasagna</h3><p>لازانيا بالجبن.</p><div class="row"><span class="tag">وجبات</span><a class="btn" href="#">أضف</a></div></div></article>
+                <article class="card"><div class="cover"><img src="assets/images/Steak.JPG" alt="Steak"><span class="price">$12.90</span></div><div class="body"><h3>Steak</h3><p>ستيك مشوي.</p><div class="row"><span class="tag">وجبات</span><a class="btn" href="#">أضف</a></div></div></article>
+                <article class="card"><div class="cover"><img src="assets/images/Mix grill.JPG" alt="Mix grill"><span class="price">$11.90</span></div><div class="body"><h3>Mix grill</h3><p>مشاوي مشكلة.</p><div class="row"><span class="tag">وجبات</span><a class="btn" href="#">أضف</a></div></div></article>
             </div>
         </section>
 
@@ -90,7 +90,7 @@
         <section id="breakfast" class="mt-32">
             <div class="section-head"><h2>فطور</h2><p>لبداية يوم نشيطة</p></div>
             <div class="grid products">
-                <article class="card"><div class="cover"><img src="assets/images/First breakfast.jpg" alt="First breakfast"><span class="price">$6.90</span></div><div class="body"><h3>First breakfast</h3><p>طبق فطور متكامل.</p><div class="row"><span class="tag">فطور</span><a class="btn" href="#">أضف</a></div></div></article>
+                <article class="card"><div class="cover"><img src="assets/images/First breakfast.JPG" alt="First breakfast"><span class="price">$6.90</span></div><div class="body"><h3>First breakfast</h3><p>طبق فطور متكامل.</p><div class="row"><span class="tag">فطور</span><a class="btn" href="#">أضف</a></div></div></article>
             </div>
         </section>
     </main>
