--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700;800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/style.CSS" />
 </head>
 <body>
-
     <header class="navbar">
         <div class="container wrap">
             <a class="brand" href="index.html">
@@ -29,94 +28,42 @@
     </header>
 
     <main>
-        <!-- HERO -->
         <section class="hero container">
             <div class="card">
                 <div class="inner">
                     <span class="badge">طازج • مختار بعناية</span>
                     <h1>أطعمة ومشروبات مميّزة تُقدَّم بذوق.</h1>
-                    <p class="lead">قهوة مختصّة، مشروبات مثلّجة، صودا منعشة، ووجبات شهية من أفضل المكوّنات.</p>
+                    <p class="lead">قهوة مختصّة، مشروبات مثلّجة، صودا منعشة، ووجبات شهية.</p>
                     <div class="actions">
                         <a class="btn btn-primary" href="products.html">ابدأ التسوق</a>
                         <a class="btn" href="about.html">لماذا نحن؟</a>
                     </div>
                 </div>
             </div>
-
             <div class="hero-visual">
-                <div class="plate">
-                    <img src="assets/images/Cappuccino.JPG" alt="Cappuccino" />
-                </div>
+                <div class="plate"><img src="assets/images/Cappuccino.JPG" alt="Cappuccino" /></div>
                 <div class="note">اختيارات منتقاة • تحديث دوري</div>
             </div>
         </section>
 
-        <!-- Featured -->
         <section class="container">
-            <div class="section-head">
-                <h2>المميّز هذا الأسبوع</h2>
-                <p>مختارات من القهوة، الميلك شيك، الوجبات والصودا.</p>
-            </div>
-
+            <div class="section-head"><h2>المميّز هذا الأسبوع</h2><p>مختارات من القهوة والميلك شيك والوجبات والصودا.</p></div>
             <div class="grid products">
-                <article class="card">
-                    <div class="cover">
-                        <img src="assets/images/Cappuccino.JPG" alt="Cappuccino">
-                        <span class="price">$3.90</span>
-                    </div>
-                    <div class="body">
-                        <h3>Cappuccino</h3><p>إسبريسو مع رغوة حليب.</p>
-                        <div class="row"><span class="tag">قهوة</span><a class="btn btn-primary" href="products.html#coffee">تصفح الفئة</a></div>
-                    </div>
-                </article>
-
-                <article class="card">
-                    <div class="cover">
-                        <img src="assets/images/Chocolate Brownie Milkshake.JPG" alt="Chocolate Brownie Milkshake">
-                        <span class="price">$5.90</span>
-                    </div>
-                    <div class="body">
-                        <h3>Chocolate Brownie Milkshake</h3><p>كريمي بالشوكولاتة.</p>
-                        <div class="row"><span class="tag">ميلك شيك</span><a class="btn btn-primary" href="products.html#milkshakes">تصفح الفئة</a></div>
-                    </div>
-                </article>
-
-                <article class="card">
-                    <div class="cover">
-                        <img src="assets/images/Burger, double cheese.JPG" alt="Burger, double cheese">
-                        <span class="price">$7.90</span>
-                    </div>
-                    <div class="body">
-                        <h3>Burger, double cheese</h3><p>جبنة مزدوجة وطعم مميز.</p>
-                        <div class="row"><span class="tag">وجبات</span><a class="btn btn-primary" href="products.html#meals">تصفح الفئة</a></div>
-                    </div>
-                </article>
-
-                <article class="card">
-                    <div class="cover">
-                        <img src="assets/images/Coca-Cola.JPG" alt="Coca-Cola">
-                        <span class="price">$1.80</span>
-                    </div>
-                    <div class="body">
-                        <h3>Coca-Cola</h3><p>منعشة ومثلجة.</p>
-                        <div class="row"><span class="tag">صودا</span><a class="btn btn-primary" href="products.html#soda">تصفح الفئة</a></div>
-                    </div>
-                </article>
+                <article class="card"><div class="cover"><img src="assets/images/Cappuccino.JPG" alt="Cappuccino"><span class="price">$3.90</span></div><div class="body"><h3>Cappuccino</h3><p>إسبريسو مع رغوة حليب.</p><div class="row"><span class="tag">قهوة</span><a class="btn btn-primary" href="products.html#coffee">تصفح الفئة</a></div></div></article>
+                <article class="card"><div class="cover"><img src="assets/images/Chocolate Brownie Milkshake.JPG" alt="Chocolate Brownie Milkshake"><span class="price">$5.90</span></div><div class="body"><h3>Chocolate Brownie Milkshake</h3><p>كريمي بالشوكولاتة.</p><div class="row"><span class="tag">ميلك شيك</span><a class="btn btn-primary" href="products.html#milkshakes">تصفح الفئة</a></div></div></article>
+                <article class="card"><div class="cover"><img src="assets/images/Burger, double cheese.JPG" alt="Burger, double cheese"><span class="price">$7.90</span></div><div class="body"><h3>Burger, double cheese</h3><p>جبنة مزدوجة وطعم مميز.</p><div class="row"><span class="tag">وجبات</span><a class="btn btn-primary" href="products.html#meals">تصفح الفئة</a></div></div></article>
+                <article class="card"><div class="cover"><img src="assets/images/Coca-Cola.JPG" alt="Coca-Cola"><span class="price">$1.80</span></div><div class="body"><h3>Coca-Cola</h3><p>منعشة ومثلجة.</p><div class="row"><span class="tag">صودا</span><a class="btn btn-primary" href="products.html#soda">تصفح الفئة</a></div></div></article>
             </div>
         </section>
     </main>
 
     <footer>
         <div class="container footer-grid">
-            <div>
-                <h4><img src="assets/icons/ams-logo.PNG" alt="Logo" style="width:20px;height:20px;border-radius:5px;vertical-align:middle;margin-left:6px;"> Al-Minshaw Shop</h4>
-                <p>وجهتك للأطعمة والمشروبات المختارة بعناية.</p>
-            </div>
+            <div><h4><img src="assets/icons/ams-logo.PNG" alt="Logo" style="width:20px;height:20px;border-radius:5px;vertical-align:middle;margin-left:6px;"> Al-Minshaw Shop</h4><p>وجهتك للأطعمة والمشروبات المختارة بعناية.</p></div>
             <div><h4>التواصل</h4><p>📧 <a href="mailto:youssif2371@gmail.com">youssif2371@gmail.com</a><br>📞 <a href="tel:+201554338151">+201554338151</a></p></div>
             <div><h4>روابط</h4><p><a href="products.html">المنتجات</a><br><a href="about.html">من نحن</a><br><a href="contact.html">تواصل</a></p></div>
         </div>
         <div class="container footer-small">© 2025 Al-Minshaw Shop — جميع الحقوق محفوظة.</div>
     </footer>
-
 </body>
 </html>
